--- a/estilo.css
+++ b/estilo.css
@@ -1,1 +1,79 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
 
+/* Container geral */
+body {
+    background-color: #f5f5f5;
+}
+
+/* Cabeçalho */
+header {
+    background-color: #666;
+    color: white;
+    padding: 15px;
+}
+
+header h1 {
+    font-size: 32px;
+}
+
+/* Estrutura principal com menu à esquerda e conteúdo à direita */
+nav {
+    width: 200px;
+    float: left;
+    background-color: #aaa;
+    min-height: 100%;
+}
+
+nav ul {
+    list-style: none;
+}
+
+nav li {
+    border-bottom: 1px solid #888;
+}
+
+nav a {
+    display: block;
+    padding: 15px;
+    color: black;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+nav a:hover {
+    background-color: #888;
+    color: white;
+}
+
+/* Área de conteúdo */
+section {
+    margin-left: 200px;  /* espaço para o menu lateral */
+    padding: 20px;
+    background-color: white;
+    min-height: 500px;
+}
+
+section h2 {
+    margin-bottom: 15px;
+}
+
+/* Parágrafos do conteúdo */
+section p {
+    margin-bottom: 15px;
+    text-align: justify;
+}
+
+/* Rodapé */
+footer {
+    clear: both;
+    background-color: #666;
+    color: white;
+    text-align: left;
+    padding: 10px;
+    font-size: 14px;
+}
