--- a/estilo.css
+++ b/estilo.css
@@ -5,12 +5,12 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Container geral */
+
 body {
     background-color: #f5f5f5;
 }
 
-/* Cabeçalho */
+
 header {
     background-color: #666;
     color: white;
@@ -21,7 +21,7 @@ header h1 {
     font-size: 32px;
 }
 
-/* Estrutura principal com menu à esquerda e conteúdo à direita */
+
 nav {
     width: 200px;
     float: left;
@@ -50,9 +50,9 @@ nav a:hover {
     color: white;
 }
 
-/* Área de conteúdo */
+
 section {
-    margin-left: 200px;  /* espaço para o menu lateral */
+    margin-left: 200px;  
     padding: 20px;
     background-color: white;
     min-height: 500px;
@@ -62,13 +62,13 @@ section h2 {
     margin-bottom: 15px;
 }
 
-/* Parágrafos do conteúdo */
+
 section p {
     margin-bottom: 15px;
     text-align: justify;
 }
 
-/* Rodapé */
+
 footer {
     clear: both;
     background-color: #666;
